--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   get: ^4.6.5
   google_fonts: ^3.0.1
   loading_animation_widget: ^1.2.0+3
+  flutter_otp_text_field: ^1.1.1
+  flutter_svg: ^1.1.6
 
 dev_dependencies:
   flutter_test:
@@ -71,6 +73,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/icons/
+    - assets/images/
+    - assets/icons/svgicons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
