--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   loading_animation_widget: ^1.2.0+3
   flutter_otp_text_field: ^1.1.1
   flutter_svg: ^1.1.6
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
